Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <h2>
 <a id="course-materials" class="anchor" href="#course-materials" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course Materials</h2>
 
-<p>The lecture slides are in HTML format, which requires javascript enabled browser to render properly. 
-All lecture slides are generated using IPython notebook, click the link ipynb to view the source
+<p>All lecture slides are generated using IPython notebook, click the link ipynb to view the source
 IPython notebook. You can also download all the source ipython notebooks and related Python codes from 
 <a href="http://github.com/yadongli/nyumath2048">http://github.com/yadongli/nyumath2048</a> </p>
 
@@ -46,9 +45,28 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 
 <p>Lecture slides and homework will be published weekly before the Wednesday lecture. </p>
 
-<p>Old lecture slides for Spring 2015 semester are available <a href="http://yadongli.github.io/nyumath2048/2015Spring/">here</a></p>
+<p>Old lecture slides from Spring 2015 semester are available <a href="http://yadongli.github.io/nyumath2048/2015Spring/">here</a></p>
+
+<p>Lecture slides are in HTML format, which requires javascript enabled browser to render properly. </p>
 
 <p></p>
+
+<table>
+<thead>
+<tr>
+<th align="center">Lecture</th>
+<th align="center">Materials</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="center">1. Introduction</td>
+<td align="center">
+<a href="Lecture1.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture1.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework1.ipynb">homework</a>
+</td>
+</tr>
+</tbody>
+</table>
 
 
 
