--- a/ClassPolicies.slides.html
+++ b/ClassPolicies.slides.html
@@ -302,6 +302,7 @@ $(document).ready(function(){
 <ul>
 <li>It is okay to discuss general theories and technical issues with your classmate</li>
 <li>It is not okay to discuss specific problems and solutions of the homework with others</li>
+<li>If not sure, please ask the question in the class forum</li>
 <li>Copying other people's homework solutions will not be tolerated<ul>
 <li>both parties will be punished(we can't and don't want to distinguish who copied whom)</li>
 </ul>
