--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -6855,8 +6855,10 @@ $$g(t) = \int_0^t h(s) ds = -\log(p(t))$$<ul>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Bootstrap">Bootstrap<a class="anchor-link" href="#Bootstrap">&#182;</a></h2><p>$\renewcommand{bs}{\boldsymbol}$</p>
+<p>The objective:</p>
 <ul>
-<li>In the CDS market, we observe the quoted spread $\bs q(t)$ in the maket, and we want to build a curve in hazard rate $\bs h(t)$ (or equivalently, the cumulative hazard $\bs g(t)$).</li>
+<li>build a curve in hazard rate $\bs h(t)$ that exactly reprice all observed CDS prices quoted in $\bs q(t)$</li>
+<li>or equivalently, we could build the curve in cumulative hazard $\bs g(t)$.</li>
 </ul>
 <p>Bootstrap is the standard method to build curves in quatitative finance</p>
 <ul>
