--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -6378,11 +6378,11 @@ G8d4ODg4ODiEjWM8HBwcHBzC5v8DT99t55uCoRwAAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Norm-and-Condition">Norm and Condition<a class="anchor-link" href="#Norm-and-Condition">&#182;</a></h1>
+<h1 id="norm-and-condition">Norm and Condition</h1>
+<p>Robert Heinlein: Throughout history, poverty is the normal condition of man.</p>
 </div>
 </div>
-</div>
-</section><section>
+</div></section><section>
     
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -7106,7 +7106,6 @@ $$\scriptsize A=\left(\begin{matrix}1.0 & 2.0\\2.0 & 3.999\end{matrix}\right)\;,
 <p>Deflating Sharpe Ratio: <a href="http://www.davidhbailey.com/dhbpapers/deflated-sharpe.pdf">http://www.davidhbailey.com/dhbpapers/deflated-sharpe.pdf</a></p>
 <p>Homework:</p>
 <ul>
-<li>Bindel and Goodman: Problem 4.8</li>
 <li>Complete <a href="http://yadongli.github.io/nyumath2048">homework set 2</a></li>
 </ul>
 </div>
