--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -1754,7 +1754,7 @@ $(document).ready(function(){
 <li>Review of Linear Algebra</li>
 <li>Gaussian Elimination and LU Factorization</li>
 <li>Cholesky decomposition</li>
-<li>Matrix calculus and Mean/Var optimization</li>
+<li>Matrix calculus</li>
 <li>Norm and condition</li>
 </ul>
 </div>
