--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -8376,22 +8376,22 @@ The objective:</p>
 </ul>
 <p>Why bootstrap?</p>
 <ul>
-<li>because the dependency is like:</li>
+<li>the dependency is triangular, because of non-zero coupons:</li>
 </ul>
 <table>
 <thead>
 <tr>
-<th style="text-align:center">-</th>
-<th style="text-align:center">h(3m)</th>
-<th style="text-align:center">h(6m)</th>
-<th style="text-align:center">h(1Y)</th>
-<th style="text-align:center">h(2Y)</th>
-<th style="text-align:center">h(5Y)</th>
+<th style="text-align:center"></th>
+<th style="text-align:center">$\;h(3m)\;$</th>
+<th style="text-align:center">$\;h(6m)\;$</th>
+<th style="text-align:center">$\;h(1Y)\;$</th>
+<th style="text-align:center">$\;h(2Y)\;$</th>
+<th style="text-align:center">$\;h(5Y)\;$</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center">q(3m)</td>
+<td style="text-align:center">$\;q(3m)\;\;$</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center"></td>
 <td style="text-align:center"></td>
@@ -8399,7 +8399,7 @@ The objective:</p>
 <td style="text-align:center"></td>
 </tr>
 <tr>
-<td style="text-align:center">q(6m)</td>
+<td style="text-align:center">$\;q(6m)\;$</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center"></td>
@@ -8407,7 +8407,7 @@ The objective:</p>
 <td style="text-align:center"></td>
 </tr>
 <tr>
-<td style="text-align:center">q(1Y)</td>
+<td style="text-align:center">$\;q(1Y)\;$</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
@@ -8415,7 +8415,7 @@ The objective:</p>
 <td style="text-align:center"></td>
 </tr>
 <tr>
-<td style="text-align:center">q(2Y)</td>
+<td style="text-align:center">$\;q(2Y)\;$</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
@@ -8423,7 +8423,7 @@ The objective:</p>
 <td style="text-align:center"></td>
 </tr>
 <tr>
-<td style="text-align:center">q(5Y)</td>
+<td style="text-align:center">$\;q(5Y)\;$</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
