--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -8357,7 +8357,8 @@ $$p(t) = e^{-\int_0^t h(s) ds}$$</p>
 </ul>
 </div>
 </div>
-</div>
+</div></section><section>
+    
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
