Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h2>
-<a id="course-materials" class="anchor" href="#course-materials" aria-hidden="true"><span class="octicon octicon-link"></span></a>Course Materials</h2>
+<a id="course-materials" class="anchor" href="#course-materials" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Course Materials</h2>
 
 <p>All lecture slides are generated using IPython notebook, click the link ipynb to view the source
 IPython notebook. You can also download all the source ipython notebooks and related Python codes from 
 <a href="http://github.com/yadongli/nyumath2048">http://github.com/yadongli/nyumath2048</a> </p>
 
 <ul>
-<li><a href="https://github.com/yadongli/nyumath2048/blob/master/syllabus.pdf?raw=true">syllabus</a></li>
+<li>syllabus</li>
 <li><a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/ClassPolicies.ipynb">class policies</a></li>
 </ul>
 
@@ -73,14 +73,14 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 
 
 <h2>
-<a id="python-setup" class="anchor" href="#python-setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Python setup</h2>
+<a id="python-setup" class="anchor" href="#python-setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Python setup</h2>
 
 <p>Python is the primary programming tool for this class. The following is a step by step instruction on how to set up the right Python environment for the class.</p>
 
 <p><a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/PythonSetup.ipynb">Python setup instructions </a></p>
 
 <h2>
-<a id="how-to-saveprint-slides-as-pdf" class="anchor" href="#how-to-saveprint-slides-as-pdf" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to save/print slides as PDF</h2>
+<a id="how-to-saveprint-slides-as-pdf" class="anchor" href="#how-to-saveprint-slides-as-pdf" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to save/print slides as PDF</h2>
 
 <ul>
 <li>open the lecture slides using Chrome browser and append "?print-pdf" to the end of the URL, e.g.:
@@ -93,12 +93,12 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <p>Similar steps should also work in other browsers, as long as you already have a PDF printer. The latest Chrome browser supports "Save as PDF" out of box. </p>
 
 <h2>
-<a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Disclaimer</h2>
+<a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Disclaimer</h2>
 
 <p>All course materials and codes are provided as-is, without any warranty for completeness or correctness. </p>
 
 <h2>
-<a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h2>
+<a id="authors" class="anchor" href="#authors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors</h2>
 
 <p><a href="https://github.com/yadongli" class="user-mention">@yadongli</a> <a href="https://github.com/hcheng66" class="user-mention">@hcheng66</a></p>
 
