Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <a href="http://github.com/yadongli/nyumath2048">http://github.com/yadongli/nyumath2048</a> </p>
 
 <ul>
-<li>syllabus</li>
+<li><a href="http://nbviewer.jupyter.org/github/yadongli/nyumath2048/blob/master/syllabus.ipynb">syllabus</a></li>
 <li><a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/ClassPolicies.ipynb">class policies</a></li>
 </ul>
 
