--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -6734,6 +6734,15 @@ Reveal.initialize({
      theme: 'white', // available themes are in /css/theme
 });
 
+// remap F5/ESC/b key
+Reveal.configure({
+  keyboard: {
+    66: 'right',
+    116: 'left',
+    27: 'left'
+  }
+});
+
 </script>
 
 
