--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -4249,8 +4249,8 @@ $$</p>
 </ul>
 <p>But an ill-posed problem is always numerically unstable by definition.</p>
 <ul>
-<li>Direct numerical calculation is always unstable at around $x = 2\pi$</li>
-<li>But we can use approximation near $2\pi$: $f(x) = \frac{1}{2x^2}(x-2\pi)^2$</li>
+<li>Direct numerical calculation is unstable around $x = 2\pi$</li>
+<li>Does this help? $f(x) \approx \frac{1}{2x^2}(x-2\pi)^2$</li>
 </ul>
 </div>
 </div>
