--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -1936,7 +1936,7 @@ div.output_prompt {
 <h2 id="grades-tentative-">Grades (tentative)</h2>
 <ul>
 <li>Homework 30%</li>
-<li>Project (tentative 20%, we may cancel project and move this portion to the final)</li>
+<li>Project (tentative 20%, we may cancel project and move this portion to the homework)</li>
 <li>Final 50% </li>
 <li>Extra credits <ul>
 <li>extra credit homework problems</li>
