--- a/index.html
+++ b/index.html
@@ -98,11 +98,18 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <p>All course materials and codes are provided as-is, without any warranty for completeness or correctness. </p>
 
 <h2>
+<a id="copyright-notice" class="anchor" href="#copyright-notice" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Copyright notice</h2>
+
+<p>All python codes embedded in the class IPython notebook are open source software under the <a href="https://opensource.org/licenses/MIT">MIT license</a>, any derived work using the said Python codes shall reference to this github page. </p>
+
+<p>The text portion of the class lectures, including but not limited to, contents, slides, derivations, examples, illustrations and homework problems are fully copyrighted, and all rights are reserved by the instructors.  </p>
+
+<h2>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors</h2>
 
 <p><a href="https://github.com/yadongli" class="user-mention">@yadongli</a> <a href="https://github.com/hcheng66" class="user-mention">@hcheng66</a></p>
 
-<p>© 2014-2015, all rights reserved</p>
+<p>© 2014-2016</p>
       </section>
     </div>
 
