Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 
 <p>All python codes embedded in the class IPython notebook are open source software under the <a href="https://opensource.org/licenses/MIT">MIT license</a>, any derived work using the said Python codes shall reference to this github page. </p>
 
-<p>The text portion of the class lectures, including but not limited to, contents, slides, derivations, examples, illustrations and homework problems are fully copyrighted, and all rights are reserved by the instructors.  </p>
+<p>The text portion of the class lectures, including but not limited to its contents, slides, derivations, examples, illustrations and homework problems are fully copyrighted, and all rights are reserved by the instructors.  </p>
 
 <h2>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors</h2>
