Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <h2>
 <a id="copyright-notice" class="anchor" href="#copyright-notice" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Copyright notice</h2>
 
-<p>All python codes embedded in the class IPython notebook are open source software under the <a href="https://opensource.org/licenses/MIT">MIT license</a>, any derived work using the said Python codes shall reference to this github page. </p>
+<p>All python codes embedded in the class IPython notebook can be used free of charge by anyone. They are released under the open source <a href="https://opensource.org/licenses/MIT">MIT license</a>, any derived work from the said Python codes shall reference to this github page. </p>
 
-<p>The text portion of the class lectures, including but not limited to its contents, slides, derivations, examples, illustrations and homework problems are fully copyrighted, and all rights are reserved by the instructors.  </p>
+<p>The rest of the class materials, including but not limited to its contents, organization, lecture slides, derivations, examples, illustrations and homework problems etc, are copyrighted by the instructors. Any unauthorized copy and redistribution of these class materials are prohibited. </p>
 
 <h2>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors</h2>
