Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 
 <p>All python codes embedded in the class IPython notebook can be used free of charge by anyone. They are released under the open source <a href="https://opensource.org/licenses/MIT">MIT license</a>, any derived work from the said Python codes shall reference to this github page. </p>
 
-<p>The rest of the class materials, including but not limited to its contents, organization, lecture slides, derivations, examples, illustrations and homework problems etc, are copyrighted by the instructors. Any unauthorized copy and redistribution of these class materials are prohibited. </p>
+<p>The rest of the class materials, including but not limited to its contents, organization, lecture slides, derivations, examples, illustrations and homework problems etc, are copyrighted by the instructors. Educational use of these class materials by any educational institutions are granted, conditioned on that this github page is referenced and attributed to. Any other unauthorized use, copy and redistribution of these class materials are prohibited. </p>
 
 <h2>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors</h2>
