--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <p>The rest of the class materials, including but not limited to its contents, organization, lecture slides, derivations, 
 examples, illustrations and homework problems etc, are copyrighted by the instructors. Permissions are granted for
 any educational institutions to use these class materials for educational purposes, conditioned on that this github 
-page is referenced and attributed to. Any other unauthorized use, copy and redistribution of these class materials 
-are prohibited.</p>
+page is referenced and attributed to. All other rights reserved.</p>
 
 <h2>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors</h2>
