--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -8747,7 +8747,7 @@ IrGmhFhEREREYk0JsYiIiIjEmhJiEREREYk1JcQiIiIiEmv/HxQR1LAR7VjgAAAAAElFTkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Pros and cons of piecewise flat bootstrap</p>
+<h2 id="pros-and-cons-of-piecewise-flat-bootstrap">Pros and cons of piecewise flat bootstrap</h2>
 <ul>
 <li>All benchmark prices are exactly matched, after bootstrap with piecewise flat hazard rate.</li>
 <li>Discontinuity in hazard rate causes hedging problems, risk profiles jump over the roll dates.</li>
@@ -9441,13 +9441,14 @@ QP4fX7AdOXiRBSUAAAAASUVORK5CYII=
 </div>
 </div>
 
-</div>
+</div></section><section>
+    
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Tension spline interpolation is global:</p>
+<h2 id="tension-spline-interpolation-is-global">Tension spline interpolation is global</h2>
 <ul>
 <li>Changes in longer maturity affects the shorter end of the curve</li>
 <li>The benchmark CDS won&#39;t reprice exactly after the bootstrapping</li>
