--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -2257,6 +2257,7 @@ div.output_prompt {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="expressivity">Expressivity</h2>
+<p>$$ $$</p>
 <center>
 <img src="img/proglang.png" width=500 height=500>
 </center>
@@ -2318,7 +2319,7 @@ div.output_prompt {
 <li>With the latest IPython, numpy/pandas/scipy etc.</li>
 <li>either 32bit or 64bit version works</li>
 </ul>
-<p>Pyton setup instructions:</p>
+<p>Python setup instructions:</p>
 <ul>
 <li>available at: <a href="http://yadongli.github.io/nyumath2048">http://yadongli.github.io/nyumath2048</a></li>
 </ul>
@@ -2353,6 +2354,7 @@ div.output_prompt {
 <p>Both measure are useful in practice.</p>
 <ul>
 <li>Beware of small $|a|$ when comparing relative errors</li>
+<li>Is the error normal or lognormal?</li>
 </ul>
 </div>
 </div>
@@ -2425,7 +2427,7 @@ div.output_prompt {
 <h2 id="rounding-under-ieee754">Rounding under IEEE754</h2>
 <p>Default rule: round to the nearest, ties to even digit</p>
 <ul>
-<li>Example, rround to 4 significant digit: <ul>
+<li>Example, round to 4 significant digit: <ul>
 <li>$3.1245 \rightarrow 3.124$</li>
 <li>$43515 \rightarrow 43520$ </li>
 </ul>
